--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +11,12 @@
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@android:color/transparent"
-       android:layout_centerInParent="true"/>
+       android:layout_centerInParent="true"
+       app:ipv_middle_icon="@drawable/box"
+       app:ipv_highlight_background_color="@color/highlight_background_color"
+       app:ipv_default_background_color="@color/default_background_color"
+       app:ipv_text_color="@android:color/white"
+       app:ipv_text_size="@dimen/text_size"/>
 
    <TextView
        android:id="@+id/productName"
