--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="default_background_color">#435E69</color>
+    <color name="highlight_background_color">#4BBEC2</color>
+    <color name="counter_background_color">#2B3841</color>
 </resources>
